# Piccolo

./: .gitignore  CMakeLists.txt
assets/shader/: CMakeLists.txt
configs/development/: PiccoloEditor.ini
editor/: CMakeLists.txt
engine/: CMakeLists.txt
engine/source/game/: CMakeLists.txt  game.cpp
engine/source/runtime/: engine.h
engine/source/runtime/function/framework/component/motor/: motor_component.cpp
engine/source/runtime/function/input/: input_system.cpp
engine/src/precompile/: precompile.cmake
engine/src/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/src/runtime/core/base/: log.cpp  log.h  macro.h
engine/src/runtime/function/character/: character.cpp
engine/src/runtime/function/framework/component/camera/: camera_component.cpp
engine/src/runtime/function/framework/world/: game_mode.cpp  game_mode.h  player.h  world_manager.cpp  world_manager.h
engine/src/runtime/function/global/: global_context.cpp  global_context.h
engine/src/runtime/function/input/: input_system.cpp  input_system.h
engine/src/runtime/network/: network.cpp  network.h
game/: CMakeLists.txt
game/src/: game.cpp  game.h  game_input_manager.cpp  game_input_manager.h
include/: piccolodef.h
lib_debug/cmake/: protobuf-module.cmake  protobuf-targets.cmake
lib_debug/lib/cmake/absl/: abslTargets-debug.cmake
lib_debug/lib/cmake/kcp/: kcp-config-debug.cmake
lib_debug/lib/cmake/libconfig/: libconfig++Config-debug.cmake  libconfig++Config.cmake  libconfigConfig-debug.cmake
lib_debug/lib/cmake/libuv/: libuvConfig-debug.cmake  libuvConfig.cmake
lib_debug/lib/pkgconfig/: absl_absl_check.pc  absl_absl_log.pc  absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_any_invocable.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_any_cast_impl.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_btree.pc  absl_check.pc  absl_city.pc  absl_civil_time.pc  absl_cleanup.pc  absl_cleanup_internal.pc  absl_common_policy_traits.pc  absl_compare.pc  absl_compressed_tuple.pc  absl_config.pc  absl_container_common.pc  absl_container_memory.pc  absl_cord.pc  absl_cord_internal.pc  absl_cordz_functions.pc  absl_cordz_handle.pc  absl_cordz_info.pc  absl_cordz_sample_token.pc  absl_cordz_statistics.pc  absl_cordz_update_scope.pc  absl_cordz_update_tracker.pc  absl_core_headers.pc  absl_counting_allocator.pc  absl_crc32c.pc  absl_crc_cord_state.pc  (+143 more)
lib_debug/lib/tinyobjloader/cmake/: tinyobjloader-targets.cmake
lib_release/cmake/: protobuf-config-version.cmake
lib_release/lib/cmake/absl/: abslTargets-release.cmake  abslTargets.cmake
lib_release/lib/cmake/kcp/: kcp-config-release.cmake  kcp-config.cmake
lib_release/lib/cmake/libconfig/: libconfig++Config-release.cmake  libconfig++ConfigVersion.cmake  libconfigConfig-release.cmake  libconfigConfig.cmake
lib_release/lib/cmake/libuv/: libuvConfig-release.cmake
lib_release/lib/pkgconfig/: absl_absl_check.pc  absl_absl_log.pc  absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_any_invocable.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_any_cast_impl.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_btree.pc  absl_check.pc  absl_city.pc  absl_civil_time.pc  absl_cleanup.pc  absl_cleanup_internal.pc  absl_common_policy_traits.pc  absl_compare.pc  absl_compressed_tuple.pc  absl_config.pc  absl_container_common.pc  absl_container_memory.pc  absl_cord.pc  absl_cord_internal.pc  absl_cordz_functions.pc  absl_cordz_handle.pc  absl_cordz_info.pc  absl_cordz_sample_token.pc  absl_cordz_statistics.pc  absl_cordz_update_scope.pc  absl_cordz_update_tracker.pc  absl_core_headers.pc  absl_counting_allocator.pc  absl_crc32c.pc  absl_crc_cord_state.pc  (+143 more)
test/: CMakeLists.txt  test.cpp  testclient.cpp  testserver.cpp
